// Copyright 2022 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

option go_package = "client/proto";

package proto;

import "plugin.proto";
import "secret.proto";

/*
  Top level request object for acquiring tasks
 */
message AcquireTasksResponse {
  // There will be only one payload per request at current stage of implementation.
  // But it's always good to keep API definition plural for future extensibility.
  repeated TaskPayload task = 1;
}

/*
 All data that is needed to execute the job
 */
message TaskPayload {
  string id = 1;  // Id for the request.

  // specifies the resource and method delegate will take actions about
  // With new architecture, we will bring 3 concepts as first class in delegate
  // 1. set up an execution infrastructure 2. executing steps 3. clean up execution infrastructure
  // When delegate acquires a RequestPayload, based on the resourceUri and resourceMethod it will invoke corresponding
  // handler to process the payload.
  // For example, when delegate receives POST /executioninfrastructure/{runnerType},
  // delegate will invoke the handler of creating an execution infra.
  // When delegate receives POST /execution/{runnerType},
  // delegate will invoke the handler of executing a task, in which it will call the corresponding runner's API to
  // execute the task.
  string eventType = 2;
  string runnerType = 3;
  InputData task_data = 4;        // binary data for task inputs.
  InputData infra_data = 5;       // binary data for infra config
  string execution_infra_id = 6;  // Id for the execution infra to use
  repeated Secret secrets = 7;    // Secrets to be decrypted
  string account_id = 8;
  string log_key = 11;
}